--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 			<div class="coverbtns">
 				<div class="row">
 					<div class="col" id="gotobrief">
-						<a href="#yakorbrief">
-							<button type="button" class="btn btn-outline-primary btn-lg">Go to brief</button>
+						<a href="#gobrief">
+							<button type="button" class="btn btn-outline-primary btn-lg">Go to a brief</button>
 						</a>
 					</div>
 					<div class="col" id="proj">
@@ -52,19 +52,19 @@
 				</div>
 			</div>
 		</div>
-		<div class="container-fluid">
+		<div class="container-fluid" id="gobrief">
 			<div class="row">
-				<div class="col" id="brief">
-							<h1>Brief</h1>
-							<p>Lorem ipsum, dolor sit amet consectetur adipisicing, elit. Quae a, perspiciatis tempora? Cum maxime atque quidem quo quia? Id impedit amet, cupiditate sint similique sed et mollitia ab in necessitatibus architecto nulla est optio harum itaque sequi nostrum autem aspernatur quaerat? Mollitia vitae omnis corrupti fuga. Quibusdam quaerat soluta aut quia sapiente, ipsam doloremque ut aspernatur eligendi, ab commodi in libero labore consequuntur rem blanditiis corporis delectus fuga illum illo! Quis adipisci veniam animi accusamus ducimus eius quaerat, neque est tempora velit molestiae autem ut facilis id possimus! Suscipit, vitae ea dolor corporis tempore nemo? Tempore modi, natus hic ad! Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Nisi, dolor nemo assumenda. Dolor possimus mollitia atque commodi explicabo quos cupiditate, corrupti ad sunt, ratione doloremque quod consequuntur earum amet Lorem ipsum, dolor sit amet consectetur, adipisicing elit. Reiciendis, nesciunt? Molestias eligendi perferendis amet quasi sunt vitae repellendus ducimus quidem nam id enim eum tempora nisi perspiciatis non, hic libero. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores harum minus, eveniet distinctio, eos deleniti consectetur accusamus, blanditiis molestiae voluptatem consequatur sequi. Labore fugit autem molestias a dolor ipsa minima.
-						</div>
-						<div class="col">
-						</div>
-					</div>
-					<div class="col"></div>
+				<div class="col-8" id="brief">
+					<p class="yakorbrief" id="gobrief"></p>
+					<h1>Brief</h1>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing, elit. Quae a, perspiciatis tempora? Cum maxime atque quidem quo quia? Id impedit amet, cupiditate sint similique sed et mollitia ab in necessitatibus architecto nulla est optio harum itaque sequi nostrum autem aspernatur quaerat? Mollitia vitae omnis corrupti fuga. Quibusdam quaerat soluta aut quia sapiente, ipsam doloremque ut aspernatur eligendi, ab commodi in libero labore consequuntur rem blanditiis corporis delectus fuga illum illo! Quis adipisci veniam animi accusamus ducimus eius quaerat, neque est tempora velit molestiae autem ut facilis id possimus! Suscipit, vitae ea dolor corporis tempore nemo? Tempore modi, natus hic ad! Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Nisi, dolor nemo assumenda. Dolor possimus mollitia atque commodi explicabo quos cupiditate, corrupti ad sunt, ratione doloremque quod consequuntur earum amet Lorem ipsum, dolor sit amet consectetur, adipisicing elit. Reiciendis, nesciunt? Molestias eligendi perferendis amet quasi sunt vitae repellendus ducimus quidem nam id enim eum tempora nisi perspiciatis non, hic libero. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores harum minus, eveniet distinctio, eos deleniti consectetur accusamus, blanditiis molestiae voluptatem consequatur sequi. Labore fugit autem molestias a dolor ipsa minima.
+				</div>
+				<div class="col-4">
+				</div>
 			</div>
 		</div>
 	</div>
+
 
 	<!-- livereload -->
 	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
